# HexoDSP

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _clippy.sh  _update_readme.sh
examples/: bench_core.rs  cpal_demo_node_api.rs  cpal_synth_constructor.rs  jack_demo.rs  jack_demo_node_api.rs  list_synth_reference.rs
scripts/: pitch_quantize_prototype.wl
src/: block_compiler.rs  blocklang.rs  blocklang_def.rs  build.rs  cell_dir.rs  chain_builder.rs  dsp_nodes_ref.md  global.rs  lib.rs  log.rs  matrix.rs  matrix_repr.rs  monitor.rs  sample_lib.rs  scope_handle.rs  shared_feedback.rs  synth_constructor.rs  unsync_float_buf.rs  util.rs  wblockdsp.rs
src/dsp/: biquad.rs  build.rs  dattorro.rs  goertzel.rs  helpers.rs  mod.rs  node_ad.rs  node_adsr.rs  node_allp.rs  node_amp.rs  node_biqfilt.rs  node_bosc.rs  node_bowstri.rs  node_code.rs  node_comb.rs  node_cqnt.rs  node_delay.rs  node_ext.rs  node_exta.rs  node_fbwr_fbrd.rs  node_formant.rs  node_formfm.rs  node_fvafilt.rs  node_goertzel.rs  node_inp.rs  node_map.rs  node_midicc.rs  node_midip.rs  node_mix3.rs  node_mux9.rs  node_noise.rs  node_out.rs  node_pverb.rs  node_quant.rs  node_rndwk.rs  node_rndwlk.rs  node_rust.rs  node_sampl.rs  node_scope.rs  node_sfilter.rs  (+7 more)
src/dsp/tracker/: mod.rs  pattern.rs  sequencer.rs
src/nodes/: drop_thread.rs  feedback_filter.rs  midi.rs  mod.rs  node_conf.rs  node_exec.rs  node_graph_ordering.rs  node_prog.rs  note_buffer.rs  visual_sampling_filter.rs
src/wblockdsp/: compiler.rs  definition.rs  language.rs  mod.rs
tests/: basics.rs  blocklang.rs  constructor_api.rs  delay_buffer.rs  matrix_observer.rs  modamt.rs  node_ad.rs  node_adsr.rs  node_allp.rs  node_bosc.rs  node_code.rs  node_comb.rs  node_cqnt.rs  node_delay.rs  node_exta.rs  node_formant.rs  node_formfm.rs  node_fvafilt.rs  node_goertzel.rs  node_inp.rs  node_map.rs  node_midicc.rs  node_midip.rs  node_mix3.rs  node_mux9.rs  node_noise.rs  node_pverb.rs  node_quant.rs  node_rndwk.rs  node_sampl.rs  node_scope.rs  node_sfilter.rs  node_smap.rs  node_test.rs  node_tslfo.rs  node_vosc.rs  quant.rs  wblockdsp.rs
tests/common/: mod.rs
