[package]
name = "HexoDSP"
version = "0.1.0"
authors = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license = "AGPL-3.0-or-later"
edition = "2018"
description = "An audio synthesis DSP graph library"

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ringbuf    = "0.2.2"
triple_buffer = "5.0.6"

[dev-dependencies]
microfft    = "0.3.1"
num-complex = "0.2"
hound       = "3.4.0"
jack        = "0.6.6"

[lib]
name="hexodsp"
crate-type = ["lib"]
