[package]
name        = "hexodsp"
version     = "0.1.0"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license     = "AGPL-3.0-or-later"
edition     = "2018"
description = "Comprehensive DSP graph and synthesis library for developing a modular synthesizer in Rust, such as HexoSynth."
keywords    = ["audio", "music", "real-time", "synthesis", "synthesizer", "dsp", "sound"]
categories  = ["multimedia::audio", "multimedia", "algorithms", "mathematics"]

#[features]
#default = [ "hexotk" ]

[dependencies]
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
ringbuf       = "0.2.2"
triple_buffer = "5.0.6"
lazy_static   = "1.4.0"
#hexotk        = { optional = true, git = "https://github.com/WeirdConstructor/HexoTK.git" }
#hexotk        = { optional = true, path = "../hexotk" }
hound         = "3.4.0"

[dev-dependencies]
num-complex = "0.2"
jack        = "0.6.6"
rustfft     = "6.0.0"

[lib]
path       = "src/lib.rs"
name       = "hexodsp"
crate-type = ["lib"]
