[package]
name        = "hexodsp"
version     = "0.2.0"
authors     = ["Weird Constructor <weirdconstructor@m8geil.de>"]
license     = "GPL-3.0-or-later"
edition     = "2021"
description = "Comprehensive DSP graph and synthesis library for developing a modular synthesizer in Rust, such as HexoSynth."
keywords    = ["audio", "real-time", "synthesis", "synthesizer", "dsp"]
categories  = ["multimedia::audio", "multimedia", "algorithms", "mathematics"]

[features]
default = [ "synfx-dsp-jit" ]

[dependencies]
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
ringbuf       = "0.2.2"
triple_buffer = "5.0.6"
lazy_static   = "1.4.0"
hound         = "3.4.0"
#synfx-dsp-jit = { version = "0.6.0", optional = true }
synfx-dsp-jit = { git = "https://github.com/WeirdConstructor/synfx-dsp-jit.git", optional = true }
#synfx-dsp     = { version = "0.5.5" }
synfx-dsp = { git = "https://github.com/WeirdConstructor/synfx-dsp.git" }

[dev-dependencies]
num-complex = "0.2"
jack        = "0.10.0"
rustfft     = "6.0.0"
cpal        = "0.13.5"
anyhow      = "1.0.58"

[lib]
path       = "src/lib.rs"
name       = "hexodsp"
crate-type = ["lib"]
